objects/Group__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Agent_Id__c</fullName>
        <description>This field will be used as the unique key to be used to identify the Community user contact type. This will be the Concatenation of Agency id and Agent Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Agent Id</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agency_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_NPN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency NPN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agent_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <description>This field will hold the Agent's Entity ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent ID</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_NPN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent NPN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <description>This field will hold the Agent's Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSP_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSP_GP_ID__c</fullName>
        <description>This field will hold the FSP/GP/PDB's id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP/GP/PDB ID</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_GP_Name__c</fullName>
        <description>This field will hold the FSP/GP/PDB ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP/GP/PDB Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_NPN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP NPN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GP Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GP ID</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_NPN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GP NPN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GP Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GP Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <description>This field will hold the Group ID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Group ID</label>
        <length>44</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2-50</fullName>
                </value>
                <value>
                    <fullName>51+</fullName>
                </value>
                <value>
                    <fullName>51-199</fullName>
                </value>
                <value>
                    <fullName>199+</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                    <isActive>false</isActive>
                    <label>Small Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDB_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDB Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDB_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDB ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDB_NPN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDB NPN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDB_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDB Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDB_Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDB Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This will indicate the status of the Group</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Migrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This object will hold a Groups Relationship to its respective agent and FSP or GP. This table is only going to be used to establish this relationship which will be used in the Case Object</description>
    <label>Group-Agent</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups-Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>PDB_NPN__c</columns>
        <columns>GP_NPN__c</columns>
        <columns>FSP_NPN__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>